Fixed some alignment of equals button on multiple browsers for calc, started pomodoro clock

--- a/Calculator/css/style.css
+++ b/Calculator/css/style.css
@@ -17,7 +17,7 @@ h1{
 }
 .container{
   left: 15px;
-  position: absolute;
+  position: relative;
 }
 #screen{
   text-align: right;
@@ -76,10 +76,11 @@ h1{
   position: absolute;
 }
 #equals{
+  margin: 0;
+  padding: 0;
   margin-top: 194px;
-  margin-left: 140px;
-  padding-top: 22px;
-  padding-bottom: 26px;
+  margin-left: 114px;
+  padding: 22px 3px 26px 2px;
 }
 #zero{
   width: 76px;
